fixed an issue where the home-video wasn't aligned propperly with the nav

--- a/src/components/HomeSection.css
+++ b/src/components/HomeSection.css
@@ -3,7 +3,7 @@
     height: 100%;
     position: fixed;
     z-index: -1;
-    margin-top: -50px;
+    margin-top: -60px;
 }
 
 .arrow-container{
